修复 photo/video effects导航栏缺失问题和其页面下effect跳转到详情页问题。添加view more按钮

--- a/src/config/locale/messages/en/pages/index.json
+++ b/src/config/locale/messages/en/pages/index.json
@@ -227,6 +227,7 @@
           {
             "id": "video",
             "label": "Video Effects",
+            "viewMoreUrl": "/video-effects",
             "items": [
               {
                 "title": "French Kiss",
@@ -365,6 +366,7 @@
           {
             "id": "photo",
             "label": "Photo Effects",
+            "viewMoreUrl": "/photo-effects",
             "items": [
               {
                 "title": "Lip Bite Kiss",
@@ -538,7 +540,8 @@
           }
         ],
         "className": "bg-black",
-        "button_text": "Use This Effect"
+        "button_text": "Use This Effect",
+        "view_more": "View More"
       },
       "creations": {
         "block": "creations-section",
