--- a/src/config/locale/messages/en/pages/video-effect-details.json
+++ b/src/config/locale/messages/en/pages/video-effect-details.json
@@ -1011,7 +1011,7 @@
       }
     }
   },
-  "mimic": {
+  "ai-mimic": {
     "metadata": {
       "title": "AI Mimic Effect - Make Photos Mimic Movements",
       "description": "Use AI technology to make photos mimic various movements, including hot pole dance, twerk, electro dance and more."
@@ -1145,7 +1145,7 @@
       }
     }
   },
-  "role-swap": {
+  "ai-role-swap": {
     "metadata": {
       "title": "AI Role Swap - Creative Scene Transformation",
       "description": "Use AI technology to achieve creative role swapping, including AI tiger hug, rainy walk, meeting future child and more scenes."
