--- a/src/config/locale/messages/zh/pages/photo-effects.json
+++ b/src/config/locale/messages/zh/pages/photo-effects.json
@@ -42,7 +42,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-360-rotation-肌肉展示"
+                "url": "/video-effects/ai-360-rotation?type=肌肉展示"
               },
               {
                 "id": "ai-dance-generator-肚皮舞",
@@ -57,7 +57,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-dance-generator-肚皮舞"
+                "url": "/video-effects/ai-dance?type=肚皮舞"
               },
               {
                 "id": "ai-fake-date-中国女友",
@@ -72,7 +72,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-中国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=中国女友"
               },
               {
                 "id": "ai-fake-date-俄罗斯女友",
@@ -87,7 +87,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-俄罗斯女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=俄罗斯女友"
               },
               {
                 "id": "ai-fake-date-印度女友",
@@ -102,7 +102,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-印度女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=印度女友"
               },
               {
                 "id": "ai-fake-date-女友约会",
@@ -117,7 +117,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-女友约会"
+                "url": "/photo-effects/ai-fake-date-photo?type=女友约会"
               },
               {
                 "id": "ai-fake-date-日本女友",
@@ -132,7 +132,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-日本女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=日本女友"
               },
               {
                 "id": "ai-fake-date-法国女友",
@@ -147,7 +147,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-法国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=法国女友"
               },
               {
                 "id": "ai-fake-date-美国女友",
@@ -162,7 +162,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-美国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=美国女友"
               },
               {
                 "id": "ai-kissing-咬嘴唇之吻",
@@ -177,7 +177,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-咬嘴唇之吻"
+                "url": "/video-effects/ai-kissing?type=咬嘴唇之吻"
               },
               {
                 "id": "ai-kissing-正常接吻",
@@ -192,7 +192,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-正常接吻"
+                "url": "/video-effects/ai-kissing?type=正常接吻"
               },
               {
                 "id": "ai-kissing-法式接吻",
@@ -207,7 +207,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-法式接吻"
+                "url": "/video-effects/ai-kissing?type=法式接吻"
               },
               {
                 "id": "ai-kissing-脸颊之吻",
@@ -222,7 +222,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-脸颊之吻"
+                "url": "/video-effects/ai-kissing?type=脸颊之吻"
               },
               {
                 "id": "ai-kissing-额头之吻",
@@ -237,7 +237,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-额头之吻"
+                "url": "/video-effects/ai-kissing?type=额头之吻"
               },
               {
                 "id": "ai-selfie-with-celebrities-名人合拍",
@@ -252,7 +252,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-selfie-with-celebrities-名人合拍"
+                "url": "/photo-effects/ai-celebrity-selfie?type=名人合拍"
               },
               {
                 "id": "hug-侧身依抱",
@@ -267,7 +267,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-侧身依抱"
+                "url": "/video-effects/ai-hug?type=侧身依抱"
               },
               {
                 "id": "hug-公主抱",
@@ -282,7 +282,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-公主抱"
+                "url": "/video-effects/ai-hug?type=公主抱"
               },
               {
                 "id": "hug-托举式抱",
@@ -297,7 +297,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-托举式抱"
+                "url": "/video-effects/ai-hug?type=托举式抱"
               },
               {
                 "id": "hug-拥抱",
@@ -312,7 +312,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-拥抱"
+                "url": "/video-effects/ai-hug?type=拥抱"
               },
               {
                 "id": "hug-背后环抱",
@@ -327,7 +327,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-背后环抱"
+                "url": "/video-effects/ai-hug?type=背后环抱"
               },
               {
                 "id": "jiggle-抖动身体",
@@ -342,7 +342,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/jiggle-抖动身体"
+                "url": "/video-effects/ai-jiggle?type=抖动身体"
               },
               {
                 "id": "muscle-肌肉展示",
@@ -357,7 +357,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/muscle-肌肉展示"
+                "url": "/video-effects/ai-muscle?type=肌肉展示"
               },
               {
                 "id": "pregnant-ai-怀孕",
@@ -372,7 +372,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/pregnant-ai-怀孕"
+                "url": "/photo-effects/ai-pregnant-photo?type=怀孕"
               },
               {
                 "id": "模仿-ai站立一字马",
@@ -387,7 +387,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/模仿-ai站立一字马"
+                "url": "/video-effects/ai-mimic?type=AI站立一字马"
               },
               {
                 "id": "模仿-reze舞",
@@ -402,7 +402,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/模仿-reze舞"
+                "url": "/video-effects/ai-mimic?type=Reze舞"
               },
               {
                 "id": "模仿-叉腰扭臂",
@@ -417,7 +417,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/模仿-叉腰扭臂"
+                "url": "/video-effects/ai-mimic?type=叉腰扭臂"
               },
               {
                 "id": "模仿-扭臀舞",
@@ -432,7 +432,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/模仿-扭臀舞"
+                "url": "/video-effects/ai-mimic?type=扭臀舞"
               },
               {
                 "id": "模仿-热辣钢管舞",
@@ -447,7 +447,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/模仿-热辣钢管舞"
+                "url": "/video-effects/ai-mimic?type=热辣钢管舞"
               },
               {
                 "id": "模仿-电摇舞",
@@ -462,7 +462,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/模仿-电摇舞"
+                "url": "/video-effects/ai-mimic?type=电摇舞"
               },
               {
                 "id": "模仿-香奈儿舞",
@@ -477,7 +477,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/模仿-香奈儿舞"
+                "url": "/video-effects/ai-mimic?type=香奈儿舞"
               },
               {
                 "id": "艺术-ai局部留色视频特效",
@@ -492,7 +492,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/艺术-ai局部留色视频特效"
+                "url": "/photo-effects/art-style?type=AI局部留色视频特效"
               },
               {
                 "id": "艺术-ai御龙飞行视频",
@@ -507,7 +507,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/艺术-ai御龙飞行视频"
+                "url": "/photo-effects/art-style?type=AI御龙飞行视频"
               },
               {
                 "id": "艺术-冰雕",
@@ -522,7 +522,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/艺术-冰雕"
+                "url": "/photo-effects/art-style?type=冰雕"
               },
               {
                 "id": "视觉效果-ai爆炸效果",
@@ -537,7 +537,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/视觉效果-ai爆炸效果"
+                "url": "/video-effects/ai-visual-effects?type=AI爆炸效果"
               },
               {
                 "id": "视觉效果-史诗级爆炸漫步",
@@ -552,7 +552,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/视觉效果-史诗级爆炸漫步"
+                "url": "/video-effects/ai-visual-effects?type=史诗级爆炸漫步"
               },
               {
                 "id": "视觉效果-改变直升机机库",
@@ -567,7 +567,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/视觉效果-改变直升机机库"
+                "url": "/video-effects/ai-visual-effects?type=改变直升机机库"
               },
               {
                 "id": "视觉效果-海洋连衣裙",
@@ -582,7 +582,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/视觉效果-海洋连衣裙"
+                "url": "/video-effects/ai-visual-effects?type=海洋连衣裙"
               },
               {
                 "id": "视觉效果-穿越维度",
@@ -597,7 +597,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/视觉效果-穿越维度"
+                "url": "/video-effects/ai-visual-effects?type=穿越维度"
               },
               {
                 "id": "视觉效果-进入嘴巴",
@@ -612,7 +612,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/视觉效果-进入嘴巴"
+                "url": "/video-effects/ai-visual-effects?type=进入嘴巴"
               },
               {
                 "id": "角色切换-ai老虎拥抱",
@@ -627,7 +627,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/角色切换-ai老虎拥抱"
+                "url": "/video-effects/ai-role-swap?type=AI老虎拥抱"
               },
               {
                 "id": "角色切换-坐上豪车",
@@ -642,7 +642,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/角色切换-坐上豪车"
+                "url": "/video-effects/ai-role-swap?type=坐上豪车"
               },
               {
                 "id": "角色切换-审讯室",
@@ -657,7 +657,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/角色切换-审讯室"
+                "url": "/video-effects/ai-role-swap?type=审讯室"
               },
               {
                 "id": "角色切换-尖叫",
@@ -672,7 +672,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/角色切换-尖叫"
+                "url": "/video-effects/ai-role-swap?type=尖叫"
               },
               {
                 "id": "角色切换-遇见未来的小孩",
@@ -687,7 +687,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/角色切换-遇见未来的小孩"
+                "url": "/video-effects/ai-role-swap?type=遇见未来的小孩"
               },
               {
                 "id": "角色切换-遇见老年的我",
@@ -702,7 +702,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/角色切换-遇见老年的我"
+                "url": "/video-effects/ai-role-swap?type=遇见老年的我"
               },
               {
                 "id": "角色切换-雨中漫步",
@@ -717,7 +717,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/角色切换-雨中漫步"
+                "url": "/video-effects/ai-role-swap?type=雨中漫步"
               },
               {
                 "id": "角色切换-雨夜",
@@ -732,7 +732,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/角色切换-雨夜"
+                "url": "/video-effects/ai-role-swap?type=雨夜"
               }
             ]
           },
