--- a/src/config/locale/messages/zh/pages/video-effects.json
+++ b/src/config/locale/messages/zh/pages/video-effects.json
@@ -39,7 +39,7 @@
                 "video": "/img_video/videos/AIDanceGenerator_肚皮舞.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aidancegenerator-肚皮舞"
+                "url": "/video-effects/ai-dance?type=肚皮舞"
               },
               {
                 "id": "aifakedate-中国女友",
@@ -51,7 +51,7 @@
                 "video": "/img_video/videos/AIFakeDate_中国女友.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aifakedate-中国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=中国女友"
               },
               {
                 "id": "aifakedate-俄罗斯女友",
@@ -63,7 +63,7 @@
                 "video": "/img_video/videos/AIFakeDate_俄罗斯女友.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aifakedate-俄罗斯女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=俄罗斯女友"
               },
               {
                 "id": "aifakedate-印度女友",
@@ -75,7 +75,7 @@
                 "video": "/img_video/videos/AIFakeDate_印度女友.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aifakedate-印度女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=印度女友"
               },
               {
                 "id": "aifakedate-女友约会",
@@ -87,7 +87,7 @@
                 "video": "/img_video/videos/AIFakeDate_女友约会.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aifakedate-女友约会"
+                "url": "/photo-effects/ai-fake-date-photo?type=女友约会"
               },
               {
                 "id": "aifakedate-日本女友",
@@ -99,7 +99,7 @@
                 "video": "/img_video/videos/AIFakeDate_日本女友.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aifakedate-日本女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=日本女友"
               },
               {
                 "id": "aifakedate-法国女友",
@@ -111,7 +111,7 @@
                 "video": "/img_video/videos/AIFakeDate_法国女友.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aifakedate-法国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=法国女友"
               },
               {
                 "id": "aifakedate-美国女友",
@@ -123,7 +123,7 @@
                 "video": "/img_video/videos/AIFakeDate_美国女友.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aifakedate-美国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=美国女友"
               },
               {
                 "id": "aikissing法式接吻",
@@ -135,7 +135,7 @@
                 "video": "/img_video/videos/AIKissing法式接吻.mp4",
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/video-effects/aikissing法式接吻"
+                "url": "/video-effects/ai-kissing?type=法式接吻"
               },
               {
                 "id": "aiselfiewithcelebrities-名人合拍",
@@ -147,7 +147,7 @@
                 "video": "/img_video/videos/AISelfiewithCelebrities_名人合拍.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/aiselfiewithcelebrities-名人合拍"
+                "url": "/photo-effects/ai-celebrity-selfie?type=名人合拍"
               },
               {
                 "id": "aikissing-正常接吻",
@@ -159,7 +159,7 @@
                 "video": "/img_video/videos/AiKissing_正常接吻.mp4",
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/video-effects/aikissing-正常接吻"
+                "url": "/video-effects/ai-kissing?type=正常接吻"
               },
               {
                 "id": "pregnantai-怀孕",
@@ -171,7 +171,7 @@
                 "video": "/img_video/videos/PregnantAI_怀孕.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/pregnantai-怀孕"
+                "url": "/photo-effects/ai-pregnant-photo?type=怀孕"
               },
               {
                 "id": "hug-侧身依抱",
@@ -183,7 +183,7 @@
                 "video": "/img_video/videos/hug_侧身依抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-侧身依抱"
+                "url": "/video-effects/ai-hug?type=侧身依抱"
               },
               {
                 "id": "hug-公主抱",
@@ -195,7 +195,7 @@
                 "video": "/img_video/videos/hug_公主抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-公主抱"
+                "url": "/video-effects/ai-hug?type=公主抱"
               },
               {
                 "id": "hug-托举式抱",
@@ -207,7 +207,7 @@
                 "video": "/img_video/videos/hug_托举式抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-托举式抱"
+                "url": "/video-effects/ai-hug?type=托举式抱"
               },
               {
                 "id": "hug-拥抱",
@@ -219,7 +219,7 @@
                 "video": "/img_video/videos/hug_拥抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-拥抱"
+                "url": "/video-effects/ai-hug?type=拥抱"
               },
               {
                 "id": "hug-背后环抱",
@@ -231,7 +231,7 @@
                 "video": "/img_video/videos/hug_背后环抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/hug-背后环抱"
+                "url": "/video-effects/ai-hug?type=背后环抱"
               },
               {
                 "id": "jiggle-抖动身体",
@@ -243,7 +243,7 @@
                 "video": "/img_video/videos/jiggle_抖动身体.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/jiggle-抖动身体"
+                "url": "/video-effects/ai-jiggle?type=抖动身体"
               },
               {
                 "id": "模仿-ai站立一字马",
@@ -255,7 +255,7 @@
                 "video": "/img_video/videos/模仿_AI站立一字马.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/模仿-ai站立一字马"
+                "url": "/video-effects/ai-mimic?type=AI站立一字马"
               },
               {
                 "id": "模仿-reze舞",
@@ -267,7 +267,7 @@
                 "video": "/img_video/videos/模仿_Reze舞.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/模仿-reze舞"
+                "url": "/video-effects/ai-mimic?type=Reze舞"
               },
               {
                 "id": "模仿-叉腰扭臂",
@@ -279,7 +279,7 @@
                 "video": "/img_video/videos/模仿_叉腰扭臂.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/模仿-叉腰扭臂"
+                "url": "/video-effects/ai-mimic?type=叉腰扭臂"
               },
               {
                 "id": "模仿-扭臀舞",
@@ -291,7 +291,7 @@
                 "video": "/img_video/videos/模仿_扭臀舞.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/模仿-扭臀舞"
+                "url": "/video-effects/ai-mimic?type=扭臀舞"
               },
               {
                 "id": "模仿-热辣钢管舞",
@@ -303,7 +303,7 @@
                 "video": "/img_video/videos/模仿_热辣钢管舞.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/模仿-热辣钢管舞"
+                "url": "/video-effects/ai-mimic?type=热辣钢管舞"
               },
               {
                 "id": "模仿-电摇舞",
@@ -315,7 +315,7 @@
                 "video": "/img_video/videos/模仿_电摇舞.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/模仿-电摇舞"
+                "url": "/video-effects/ai-mimic?type=电摇舞"
               },
               {
                 "id": "模仿-香奈儿舞",
@@ -327,7 +327,7 @@
                 "video": "/img_video/videos/模仿_香奈儿舞.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/模仿-香奈儿舞"
+                "url": "/video-effects/ai-mimic?type=香奈儿舞"
               },
               {
                 "id": "脸颊之吻",
@@ -339,7 +339,7 @@
                 "video": "/img_video/videos/脸颊之吻.mp4",
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/video-effects/脸颊之吻"
+                "url": "/video-effects/ai-kissing?type=脸颊之吻"
               },
               {
                 "id": "视觉效果-ai爆炸效果",
@@ -351,7 +351,7 @@
                 "video": "/img_video/videos/视觉效果_AI爆炸效果.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/视觉效果-ai爆炸效果"
+                "url": "/video-effects/ai-visual-effects?type=AI爆炸效果"
               },
               {
                 "id": "视觉效果-史诗级爆炸漫步",
@@ -363,7 +363,7 @@
                 "video": "/img_video/videos/视觉效果_史诗级爆炸漫步.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/视觉效果-史诗级爆炸漫步"
+                "url": "/video-effects/ai-visual-effects?type=史诗级爆炸漫步"
               },
               {
                 "id": "视觉效果-海洋连衣裙",
@@ -375,7 +375,7 @@
                 "video": "/img_video/videos/视觉效果_海洋连衣裙.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/视觉效果-海洋连衣裙"
+                "url": "/video-effects/ai-visual-effects?type=海洋连衣裙"
               },
               {
                 "id": "视觉效果-穿越维度",
@@ -387,7 +387,7 @@
                 "video": "/img_video/videos/视觉效果_穿越维度.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/视觉效果-穿越维度"
+                "url": "/video-effects/ai-visual-effects?type=穿越维度"
               },
               {
                 "id": "视觉效果-进入嘴巴",
@@ -399,7 +399,7 @@
                 "video": "/img_video/videos/视觉效果_进入嘴巴.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/视觉效果-进入嘴巴"
+                "url": "/video-effects/ai-visual-effects?type=进入嘴巴"
               },
               {
                 "id": "角色切换-ai老虎拥抱",
@@ -411,7 +411,7 @@
                 "video": "/img_video/videos/角色切换_AI老虎拥抱.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/角色切换-ai老虎拥抱"
+                "url": "/video-effects/ai-role-swap?type=AI老虎拥抱"
               },
               {
                 "id": "角色切换-坐上豪车",
@@ -423,7 +423,7 @@
                 "video": "/img_video/videos/角色切换_坐上豪车.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/角色切换-坐上豪车"
+                "url": "/video-effects/ai-role-swap?type=坐上豪车"
               },
               {
                 "id": "角色切换-审讯室",
@@ -435,7 +435,7 @@
                 "video": "/img_video/videos/角色切换_审讯室.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/角色切换-审讯室"
+                "url": "/video-effects/ai-role-swap?type=审讯室"
               },
               {
                 "id": "角色切换-尖叫",
@@ -447,7 +447,7 @@
                 "video": "/img_video/videos/角色切换_尖叫.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/角色切换-尖叫"
+                "url": "/video-effects/ai-role-swap?type=尖叫"
               },
               {
                 "id": "角色切换-雨中漫步",
@@ -459,7 +459,7 @@
                 "video": "/img_video/videos/角色切换_雨中漫步.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/角色切换-雨中漫步"
+                "url": "/video-effects/ai-role-swap?type=雨中漫步"
               },
               {
                 "id": "角色切换-雨夜",
@@ -471,7 +471,7 @@
                 "video": "/img_video/videos/角色切换_雨夜.mp4",
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/角色切换-雨夜"
+                "url": "/video-effects/ai-role-swap?type=雨夜"
               },
               {
                 "id": "muscle-肌肉展示",
@@ -483,7 +483,7 @@
                 "video": "/img_video/videos/Muscle_肌肉展示.mp4",
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/video-effects/muscle-肌肉展示"
+                "url": "/video-effects/ai-muscle?type=肌肉展示"
               }
             ]
           },
